public class Carro {
  String fabricante;
  String modelo;
  String cor;
  int anoFabricacao;
  Proprietario proprietario;
}
